[tool.poetry]
name = "onn"
version = "0.1.0"
description = ""
authors = ["Kowyo <110339237+kowyo@users.noreply.github.com>"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.1"
torchvision = "^0.20.1"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
