[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.11.0"
dependencies = [
  "matplotlib>=3.10.1",
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" }
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" }
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
